--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -9,8 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Function to track changes between the master_df and month-specific GHA and Open Positions files\n",
-    "def track_changes(master_df, gha_mom, mom_open_pos, current_month, gha_columns_to_check, open_pos_columns_to_check):\n",
+    "def track_changes(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
     "    \"\"\"\n",
     "    Tracks changes between master_df and month-specific files (GHA and Open Positions).\n",
     "\n",
@@ -19,21 +18,21 @@
     "    - gha_mom (DataFrame): The month-specific GHA data.\n",
     "    - mom_open_pos (DataFrame): The month-specific Open Positions data.\n",
     "    - current_month (str): The current month (e.g., 'Jan-24').\n",
-    "    - gha_columns_to_check (list): List of column names to check for changes in GHA files.\n",
-    "    - open_pos_columns_to_check (list): List of column names to check for changes in Open Positions files.\n",
+    "    - gha_columns (list): Columns to check for GHA source.\n",
+    "    - open_pos_columns (list): Columns to check for Open Positions source.\n",
     "\n",
     "    Returns:\n",
-    "    - updated_master_df (DataFrame): The master DataFrame with changes and new records.\n",
-    "    - updated_rows_df (DataFrame): DataFrame containing records with updates.\n",
-    "    - changed_rows_df (DataFrame): DataFrame containing records with changed values.\n",
+    "    - master_df (DataFrame): The updated master DataFrame.\n",
+    "    - final_updated_records (DataFrame): Consolidated DataFrame of all updated records.\n",
     "    \"\"\"\n",
+    "    \n",
     "    # Ensure Position ID and Employee ID are consistent as strings\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_mom['Position ID'] = gha_mom['Position ID'].astype(str)\n",
     "    mom_open_pos['Position ID'] = mom_open_pos['Position ID'].astype(str)\n",
-    "\n",
-    "    # Track updated and changed rows\n",
+    "    \n",
+    "    # Initialize lists for updated and changed rows\n",
     "    updated_rows = []\n",
     "    changed_rows = []\n",
     "\n",
@@ -41,67 +40,82 @@
     "    for idx, row in gha_mom.iterrows():\n",
     "        match_in_master = master_df[(master_df['Position ID'] == row['Position ID']) &\n",
     "                                    (master_df['Employee ID'] == row['Employee ID'])]\n",
+    "\n",
     "        if not match_in_master.empty:\n",
     "            changes = []\n",
-    "            for col in gha_columns_to_check:\n",
+    "            for col in gha_columns:\n",
     "                if row[col] != match_in_master.iloc[0][col]:\n",
     "                    changes.append(col)\n",
+    "\n",
     "            if changes:\n",
     "                changed_row = row.copy()\n",
     "                changed_row['Description'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
-    "                changed_row['Month Changed'] = current_month\n",
+    "                changed_row['Month'] = current_month\n",
     "                changed_rows.append(changed_row)\n",
     "        else:\n",
     "            new_row = row.copy()\n",
     "            new_row['Description'] = 'New Record'\n",
-    "            new_row['Month Changed'] = current_month\n",
+    "            new_row['Month'] = current_month\n",
     "            updated_rows.append(new_row)\n",
     "\n",
     "    # Process Open Positions records\n",
     "    for idx, row in mom_open_pos.iterrows():\n",
     "        match_in_master = master_df[master_df['Position ID'] == row['Position ID']]\n",
+    "\n",
     "        if not match_in_master.empty:\n",
     "            changes = []\n",
-    "            for col in open_pos_columns_to_check:\n",
-    "                if row[col] != match_in_master.iloc[0][col]:\n",
-    "                    changes.append(col)\n",
+    "            for col in open_pos_columns:\n",
+    "                if col != 'Work Location City':  # Skip this for Open Positions\n",
+    "                    if row[col] != match_in_master.iloc[0][col]:\n",
+    "                        changes.append(col)\n",
+    "\n",
     "            if changes:\n",
     "                changed_row = row.copy()\n",
     "                changed_row['Description'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
-    "                changed_row['Month Changed'] = current_month\n",
+    "                changed_row['Month'] = current_month\n",
     "                changed_rows.append(changed_row)\n",
     "        else:\n",
     "            new_row = row.copy()\n",
     "            new_row['Description'] = 'New Record'\n",
-    "            new_row['Month Changed'] = current_month\n",
+    "            new_row['Month'] = current_month\n",
     "            updated_rows.append(new_row)\n",
     "\n",
     "    # Convert lists to DataFrames\n",
     "    updated_rows_df = pd.DataFrame(updated_rows)\n",
     "    changed_rows_df = pd.DataFrame(changed_rows)\n",
     "\n",
-    "    # Combine new and changed records into master_df\n",
-    "    updated_master_df = pd.concat([master_df, updated_rows_df, changed_rows_df], ignore_index=True)\n",
+    "    # Consolidate updated records\n",
+    "    final_updated_records = pd.concat([updated_rows_df, changed_rows_df], ignore_index=True).drop_duplicates()\n",
     "\n",
-    "    return updated_master_df, updated_rows_df, changed_rows_df\n",
+    "    # Update the master_df by appending final updated records\n",
+    "    master_df = pd.concat([master_df, final_updated_records], ignore_index=True).drop_duplicates()\n",
+    "\n",
+    "    return master_df, final_updated_records\n",
     "\n",
     "# Example usage\n",
-    "gha_columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
-    "open_pos_columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "columns_to_check_gha = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
+    "columns_to_check_open_pos = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "\n",
+    "# Loop through months\n",
     "months = ['Jan-24', 'Feb-24', 'Mar-24']\n",
+    "all_updated_records = []\n",
+    "\n",
     "for month in months:\n",
-    "    # Load month-specific files\n",
+    "    # Load the monthly GHA and Open Positions files\n",
     "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')\n",
     "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')\n",
     "\n",
-    "    # Call the function\n",
-    "    master_df, updated_rows, changed_rows = track_changes(\n",
-    "        master_df, gha_mom, mom_open_pos, month, gha_columns_to_check, open_pos_columns_to_check\n",
-    "    )\n",
+    "    # Call the function to track changes\n",
+    "    master_df, updated_records = track_changes(master_df, gha_mom, mom_open_pos, month, columns_to_check_gha, columns_to_check_open_pos)\n",
+    "    all_updated_records.append(updated_records)  # Append the updated records for each month\n",
     "\n",
-    "    print(f\"Updated records for {month}:\\n\", updated_rows)\n",
-    "    print(f\"Changed records for {month}:\\n\", changed_rows)\n"
+    "# Combine all updated records into one DataFrame\n",
+    "final_updated_records_df = pd.concat(all_updated_records, ignore_index=True)\n",
+    "\n",
+    "# Write the combined DataFrame to a single sheet in Excel\n",
+    "final_updated_records_df.to_excel('final_updated_records.xlsx', sheet_name='All_Updates', index=False)\n",
+    "\n",
+    "print(\"All updated records saved to 'final_updated_records.xlsx'\")\n"
    ]
   },
   {
