--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -9,9 +9,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def track_changes(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
+    "def track_changes_with_details(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
     "    \"\"\"\n",
-    "    Tracks changes between master_df and month-specific files (GHA and Open Positions).\n",
+    "    Tracks changes with details like source, month of change, and reason.\n",
     "\n",
     "    Args:\n",
     "    - master_df (DataFrame): The merged master DataFrame.\n",
@@ -25,78 +25,89 @@
     "    - master_df (DataFrame): The updated master DataFrame.\n",
     "    - final_updated_records (DataFrame): Consolidated DataFrame of all updated records.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Ensure Position ID and Employee ID are consistent as strings\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_mom['Position ID'] = gha_mom['Position ID'].astype(str)\n",
     "    mom_open_pos['Position ID'] = mom_open_pos['Position ID'].astype(str)\n",
-    "    \n",
-    "    # Initialize lists for updated and changed rows\n",
-    "    updated_rows = []\n",
-    "    changed_rows = []\n",
+    "\n",
+    "    updated_records = []\n",
     "\n",
     "    # Process GHA records\n",
-    "    for idx, row in gha_mom.iterrows():\n",
+    "    for _, row in gha_mom.iterrows():\n",
     "        match_in_master = master_df[(master_df['Position ID'] == row['Position ID']) &\n",
     "                                    (master_df['Employee ID'] == row['Employee ID'])]\n",
     "\n",
     "        if not match_in_master.empty:\n",
+    "            # Check for changes\n",
     "            changes = []\n",
     "            for col in gha_columns:\n",
     "                if row[col] != match_in_master.iloc[0][col]:\n",
     "                    changes.append(col)\n",
     "\n",
     "            if changes:\n",
-    "                changed_row = row.copy()\n",
-    "                changed_row['Description'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
-    "                changed_row['Month'] = current_month\n",
-    "                changed_rows.append(changed_row)\n",
+    "                reason = \"; \".join([f\"{col} Changed\" for col in changes])\n",
+    "                updated_records.append({\n",
+    "                    **row.to_dict(),\n",
+    "                    'Source': 'GHA',\n",
+    "                    'Month of Change': current_month,\n",
+    "                    'Reason of Change': reason\n",
+    "                })\n",
     "        else:\n",
-    "            new_row = row.copy()\n",
-    "            new_row['Description'] = 'New Record'\n",
-    "            new_row['Month'] = current_month\n",
-    "            updated_rows.append(new_row)\n",
+    "            # New record\n",
+    "            updated_records.append({\n",
+    "                **row.to_dict(),\n",
+    "                'Source': 'GHA',\n",
+    "                'Month of Change': current_month,\n",
+    "                'Reason of Change': 'New Record'\n",
+    "            })\n",
     "\n",
     "    # Process Open Positions records\n",
-    "    for idx, row in mom_open_pos.iterrows():\n",
+    "    for _, row in mom_open_pos.iterrows():\n",
     "        match_in_master = master_df[master_df['Position ID'] == row['Position ID']]\n",
     "\n",
     "        if not match_in_master.empty:\n",
+    "            # Check for changes\n",
     "            changes = []\n",
     "            for col in open_pos_columns:\n",
-    "                if col != 'Work Location City':  # Skip this for Open Positions\n",
-    "                    if row[col] != match_in_master.iloc[0][col]:\n",
-    "                        changes.append(col)\n",
+    "                if col != 'Work Location City' and row[col] != match_in_master.iloc[0][col]:\n",
+    "                    changes.append(col)\n",
     "\n",
     "            if changes:\n",
-    "                changed_row = row.copy()\n",
-    "                changed_row['Description'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
-    "                changed_row['Month'] = current_month\n",
-    "                changed_rows.append(changed_row)\n",
+    "                reason = \"; \".join([f\"{col} Changed\" for col in changes])\n",
+    "                updated_records.append({\n",
+    "                    **row.to_dict(),\n",
+    "                    'Source': 'Open Positions',\n",
+    "                    'Month of Change': current_month,\n",
+    "                    'Reason of Change': reason\n",
+    "                })\n",
     "        else:\n",
-    "            new_row = row.copy()\n",
-    "            new_row['Description'] = 'New Record'\n",
-    "            new_row['Month'] = current_month\n",
-    "            updated_rows.append(new_row)\n",
+    "            # New record\n",
+    "            updated_records.append({\n",
+    "                **row.to_dict(),\n",
+    "                'Source': 'Open Positions',\n",
+    "                'Month of Change': current_month,\n",
+    "                'Reason of Change': 'New Record'\n",
+    "            })\n",
     "\n",
-    "    # Convert lists to DataFrames\n",
-    "    updated_rows_df = pd.DataFrame(updated_rows)\n",
-    "    changed_rows_df = pd.DataFrame(changed_rows)\n",
+    "    # Convert updated records to DataFrame\n",
+    "    updated_records_df = pd.DataFrame(updated_records)\n",
     "\n",
-    "    # Consolidate updated records\n",
-    "    final_updated_records = pd.concat([updated_rows_df, changed_rows_df], ignore_index=True).drop_duplicates()\n",
+    "    # Filter out duplicates already captured in previous months\n",
+    "    if not updated_records_df.empty:\n",
+    "        previous_changes = master_df[['Position ID', 'Reason of Change']].drop_duplicates()\n",
+    "        updated_records_df = updated_records_df.merge(previous_changes, on=['Position ID', 'Reason of Change'], how='left', indicator=True)\n",
+    "        updated_records_df = updated_records_df[updated_records_df['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
     "\n",
-    "    # Update the master_df by appending final updated records\n",
-    "    master_df = pd.concat([master_df, final_updated_records], ignore_index=True).drop_duplicates()\n",
+    "    # Update master_df\n",
+    "    master_df = pd.concat([master_df, updated_records_df], ignore_index=True).drop_duplicates()\n",
     "\n",
-    "    return master_df, final_updated_records\n",
+    "    return master_df, updated_records_df\n",
+    "\n",
     "\n",
     "# Example usage\n",
     "columns_to_check_gha = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
     "columns_to_check_open_pos = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "\n",
-    "# Loop through months\n",
     "months = ['Jan-24', 'Feb-24', 'Mar-24']\n",
     "all_updated_records = []\n",
     "\n",
@@ -106,16 +117,16 @@
     "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')\n",
     "\n",
     "    # Call the function to track changes\n",
-    "    master_df, updated_records = track_changes(master_df, gha_mom, mom_open_pos, month, columns_to_check_gha, columns_to_check_open_pos)\n",
-    "    all_updated_records.append(updated_records)  # Append the updated records for each month\n",
+    "    master_df, updated_records = track_changes_with_details(master_df, gha_mom, mom_open_pos, month, columns_to_check_gha, columns_to_check_open_pos)\n",
+    "    all_updated_records.append(updated_records)\n",
     "\n",
-    "# Combine all updated records into one DataFrame\n",
+    "# Combine all updated records\n",
     "final_updated_records_df = pd.concat(all_updated_records, ignore_index=True)\n",
     "\n",
-    "# Write the combined DataFrame to a single sheet in Excel\n",
-    "final_updated_records_df.to_excel('final_updated_records.xlsx', sheet_name='All_Updates', index=False)\n",
+    "# Write the combined DataFrame to an Excel file\n",
+    "final_updated_records_df.to_excel('final_updated_records_with_details.xlsx', sheet_name='All_Updates', index=False)\n",
     "\n",
-    "print(\"All updated records saved to 'final_updated_records.xlsx'\")\n"
+    "print(\"All updated records with details saved to 'final_updated_records_with_details.xlsx'\")\n"
    ]
   },
   {
