--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -7,18 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def track_changes(master_df, gha_mom, mom_open_pos, current_month, columns_to_check):\n",
+    "def track_changes(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
     "    \"\"\"\n",
-    "    Tracks changes and new records between the base master_df and GHA/Open Positions monthly files.\n",
-    "    \n",
+    "    Tracks changes and new records for GHA and Open Positions with separate columns for comparison.\n",
+    "\n",
     "    Args:\n",
     "    - master_df (DataFrame): The master DataFrame.\n",
     "    - gha_mom (DataFrame): The GHA monthly data.\n",
     "    - mom_open_pos (DataFrame): The Open Positions monthly data.\n",
-    "    - current_month (str): The current month being processed.\n",
-    "    - columns_to_check (list): List of attributes to check for changes.\n",
+    "    - current_month (str): Current month being processed.\n",
+    "    - gha_columns (list): Columns to compare for GHA records.\n",
+    "    - open_pos_columns (list): Columns to compare for Open Positions.\n",
     "\n",
     "    Returns:\n",
     "    - updated_master_df (DataFrame): The updated master DataFrame.\n",
@@ -29,20 +28,18 @@
     "        df['Position ID'] = df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_mom['Employee ID'] = gha_mom['Employee ID'].astype(str)\n",
-    "    \n",
+    "\n",
     "    # DataFrames to store updated records\n",
     "    updated_records = []\n",
     "\n",
     "    # Track changes for GHA records\n",
     "    for idx, row in gha_mom.iterrows():\n",
-    "        # Check if record exists in master_df\n",
     "        match = master_df[(master_df['Position ID'] == row['Position ID']) &\n",
     "                          (master_df['Employee ID'] == row['Employee ID'])]\n",
     "\n",
     "        if not match.empty:\n",
-    "            # If record exists, check for attribute changes\n",
     "            changes = []\n",
-    "            for col in columns_to_check:\n",
+    "            for col in gha_columns:\n",
     "                if row[col] != match.iloc[0][col]:\n",
     "                    changes.append(col)\n",
     "            if changes:\n",
@@ -52,7 +49,6 @@
     "                updated_row['Reason of Change'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
     "                updated_records.append(updated_row)\n",
     "        else:\n",
-    "            # If record does not exist in master_df, it's a new record\n",
     "            new_row = row.copy()\n",
     "            new_row['Source'] = 'GHA'\n",
     "            new_row['Month of Change'] = current_month\n",
@@ -61,16 +57,13 @@
     "\n",
     "    # Track changes for Open Positions records\n",
     "    for idx, row in mom_open_pos.iterrows():\n",
-    "        # Check if record exists in master_df (no Employee ID for Open Positions)\n",
     "        match = master_df[master_df['Position ID'] == row['Position ID']]\n",
     "\n",
     "        if not match.empty:\n",
-    "            # If record exists, check for attribute changes (excluding Work Location City and Employee ID)\n",
     "            changes = []\n",
-    "            for col in columns_to_check:\n",
-    "                if col not in ['Work Location City', 'Employee ID']:\n",
-    "                    if row[col] != match.iloc[0][col]:\n",
-    "                        changes.append(col)\n",
+    "            for col in open_pos_columns:\n",
+    "                if row[col] != match.iloc[0][col]:\n",
+    "                    changes.append(col)\n",
     "            if changes:\n",
     "                updated_row = row.copy()\n",
     "                updated_row['Source'] = 'Open Positions'\n",
@@ -78,7 +71,6 @@
     "                updated_row['Reason of Change'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
     "                updated_records.append(updated_row)\n",
     "        else:\n",
-    "            # If record does not exist in master_df, it's a new record\n",
     "            new_row = row.copy()\n",
     "            new_row['Source'] = 'Open Positions'\n",
     "            new_row['Month of Change'] = current_month\n",
@@ -94,13 +86,14 @@
     "    return updated_master_df, updated_records_df\n",
     "\n",
     "\n",
-    "# Example usage\n",
-    "columns_to_check = ['BF Level 3', 'BF Level 4', 'Work Location Country/Territory Name', 'Global Career Band']\n",
+    "# Example Usage\n",
+    "gha_columns = ['BF Level 3', 'BF Level 4', 'Work Location Country/Territory Name', 'Global Career Band']\n",
+    "open_pos_columns = ['BF Level 3', 'BF Level 4', 'Position Title', 'Work Location City']\n",
     "gha_mom = pd.read_csv('gha_mom_Jan24.csv')\n",
     "mom_open_pos = pd.read_csv('mom_open_pos_Jan24.csv')\n",
     "current_month = 'Jan-24'\n",
     "\n",
-    "master_df, updated_records_df = track_changes(master_df, gha_mom, mom_open_pos, current_month, columns_to_check)\n",
+    "master_df, updated_records_df = track_changes(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns)\n",
     "\n",
     "# Write updated records to a single Excel sheet\n",
     "updated_records_df.to_excel('Updated_Records.xlsx', index=False)\n"
