--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -7,96 +7,127 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def track_changes(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
+    "import pandas as pd\n",
+    "\n",
+    "def track_changes_with_details(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
     "    \"\"\"\n",
-    "    Tracks changes and new records for GHA and Open Positions with separate columns for comparison.\n",
+    "    Tracks changes with details like source, month of change, and reason.\n",
     "\n",
     "    Args:\n",
-    "    - master_df (DataFrame): The master DataFrame.\n",
-    "    - gha_mom (DataFrame): The GHA monthly data.\n",
-    "    - mom_open_pos (DataFrame): The Open Positions monthly data.\n",
-    "    - current_month (str): Current month being processed.\n",
-    "    - gha_columns (list): Columns to compare for GHA records.\n",
-    "    - open_pos_columns (list): Columns to compare for Open Positions.\n",
+    "    - master_df (DataFrame): The merged master DataFrame.\n",
+    "    - gha_mom (DataFrame): The month-specific GHA data.\n",
+    "    - mom_open_pos (DataFrame): The month-specific Open Positions data.\n",
+    "    - current_month (str): The current month (e.g., 'Jan-24').\n",
+    "    - gha_columns (list): Columns to check for GHA source.\n",
+    "    - open_pos_columns (list): Columns to check for Open Positions source.\n",
     "\n",
     "    Returns:\n",
-    "    - updated_master_df (DataFrame): The updated master DataFrame.\n",
-    "    - updated_records_df (DataFrame): DataFrame with all updates (new and changed records).\n",
+    "    - master_df (DataFrame): The updated master DataFrame.\n",
+    "    - final_updated_records (DataFrame): Consolidated DataFrame of all updated records.\n",
     "    \"\"\"\n",
-    "    # Standardize ID columns to string\n",
-    "    for df in [master_df, gha_mom, mom_open_pos]:\n",
-    "        df['Position ID'] = df['Position ID'].astype(str)\n",
+    "    # Ensure 'Position ID' and 'Employee ID' are strings\n",
+    "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
-    "    gha_mom['Employee ID'] = gha_mom['Employee ID'].astype(str)\n",
+    "    gha_mom['Position ID'] = gha_mom['Position ID'].astype(str)\n",
+    "    mom_open_pos['Position ID'] = mom_open_pos['Position ID'].astype(str)\n",
     "\n",
-    "    # DataFrames to store updated records\n",
     "    updated_records = []\n",
     "\n",
-    "    # Track changes for GHA records\n",
-    "    for idx, row in gha_mom.iterrows():\n",
-    "        match = master_df[(master_df['Position ID'] == row['Position ID']) &\n",
-    "                          (master_df['Employee ID'] == row['Employee ID'])]\n",
+    "    # Process GHA records\n",
+    "    for _, row in gha_mom.iterrows():\n",
+    "        match_in_master = master_df[(master_df['Position ID'] == row['Position ID']) &\n",
+    "                                    (master_df['Employee ID'] == row['Employee ID'])]\n",
     "\n",
-    "        if not match.empty:\n",
+    "        if not match_in_master.empty:\n",
+    "            # Check for changes\n",
     "            changes = []\n",
     "            for col in gha_columns:\n",
-    "                if row[col] != match.iloc[0][col]:\n",
+    "                if row[col] != match_in_master.iloc[0][col]:\n",
     "                    changes.append(col)\n",
+    "\n",
     "            if changes:\n",
-    "                updated_row = row.copy()\n",
-    "                updated_row['Source'] = 'GHA'\n",
-    "                updated_row['Month of Change'] = current_month\n",
-    "                updated_row['Reason of Change'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
-    "                updated_records.append(updated_row)\n",
-    "        else:\n",
-    "            new_row = row.copy()\n",
-    "            new_row['Source'] = 'GHA'\n",
-    "            new_row['Month of Change'] = current_month\n",
-    "            new_row['Reason of Change'] = 'New Record'\n",
-    "            updated_records.append(new_row)\n",
+    "                reason = \"; \".join([f\"{col} Changed\" for col in changes])\n",
+    "                updated_records.append({\n",
+    "                    **row.to_dict(),\n",
+    "                    'Source': 'GHA',\n",
+    "                    'Month of Change': current_month,\n",
+    "                    'Reason of Change': reason\n",
+    "                })\n",
+    "        elif current_month != 'Jan-24':  # Avoid marking Jan'24 as new records\n",
+    "            # New record\n",
+    "            updated_records.append({\n",
+    "                **row.to_dict(),\n",
+    "                'Source': 'GHA',\n",
+    "                'Month of Change': current_month,\n",
+    "                'Reason of Change': 'New Record'\n",
+    "            })\n",
     "\n",
-    "    # Track changes for Open Positions records\n",
-    "    for idx, row in mom_open_pos.iterrows():\n",
-    "        match = master_df[master_df['Position ID'] == row['Position ID']]\n",
+    "    # Process Open Positions records\n",
+    "    for _, row in mom_open_pos.iterrows():\n",
+    "        match_in_master = master_df[master_df['Position ID'] == row['Position ID']]\n",
     "\n",
-    "        if not match.empty:\n",
+    "        if not match_in_master.empty:\n",
+    "            # Check for changes\n",
     "            changes = []\n",
     "            for col in open_pos_columns:\n",
-    "                if row[col] != match.iloc[0][col]:\n",
+    "                if row[col] != match_in_master.iloc[0][col]:\n",
     "                    changes.append(col)\n",
-    "            if changes:\n",
-    "                updated_row = row.copy()\n",
-    "                updated_row['Source'] = 'Open Positions'\n",
-    "                updated_row['Month of Change'] = current_month\n",
-    "                updated_row['Reason of Change'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
-    "                updated_records.append(updated_row)\n",
-    "        else:\n",
-    "            new_row = row.copy()\n",
-    "            new_row['Source'] = 'Open Positions'\n",
-    "            new_row['Month of Change'] = current_month\n",
-    "            new_row['Reason of Change'] = 'New Record'\n",
-    "            updated_records.append(new_row)\n",
     "\n",
-    "    # Convert updated records to a DataFrame\n",
+    "            if changes:\n",
+    "                reason = \"; \".join([f\"{col} Changed\" for col in changes])\n",
+    "                updated_records.append({\n",
+    "                    **row.to_dict(),\n",
+    "                    'Source': 'Open Positions',\n",
+    "                    'Month of Change': current_month,\n",
+    "                    'Reason of Change': reason\n",
+    "                })\n",
+    "        else:\n",
+    "            # New record\n",
+    "            updated_records.append({\n",
+    "                **row.to_dict(),\n",
+    "                'Source': 'Open Positions',\n",
+    "                'Month of Change': current_month,\n",
+    "                'Reason of Change': 'New Record'\n",
+    "            })\n",
+    "\n",
+    "    # Convert updated records to DataFrame\n",
     "    updated_records_df = pd.DataFrame(updated_records)\n",
     "\n",
-    "    # Append updated records to the master DataFrame\n",
-    "    updated_master_df = pd.concat([master_df, updated_records_df], ignore_index=True)\n",
+    "    # Remove duplicates already in the master file\n",
+    "    if not updated_records_df.empty:\n",
+    "        previous_changes = master_df[['Position ID', 'Reason of Change']].drop_duplicates()\n",
+    "        updated_records_df = updated_records_df.merge(previous_changes, on=['Position ID', 'Reason of Change'], how='left', indicator=True)\n",
+    "        updated_records_df = updated_records_df[updated_records_df['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
     "\n",
-    "    return updated_master_df, updated_records_df\n",
+    "    # Update master_df\n",
+    "    master_df = pd.concat([master_df, updated_records_df], ignore_index=True).drop_duplicates()\n",
+    "\n",
+    "    return master_df, updated_records_df\n",
     "\n",
     "\n",
     "# Example Usage\n",
-    "gha_columns = ['BF Level 3', 'BF Level 4', 'Work Location Country/Territory Name', 'Global Career Band']\n",
-    "open_pos_columns = ['BF Level 3', 'BF Level 4', 'Position Title', 'Work Location City']\n",
-    "gha_mom = pd.read_csv('gha_mom_Jan24.csv')\n",
-    "mom_open_pos = pd.read_csv('mom_open_pos_Jan24.csv')\n",
-    "current_month = 'Jan-24'\n",
+    "columns_to_check_gha = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
+    "columns_to_check_open_pos = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "\n",
-    "master_df, updated_records_df = track_changes(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns)\n",
+    "months = ['Jan-24', 'Feb-24', 'Mar-24']\n",
+    "all_updated_records = []\n",
     "\n",
-    "# Write updated records to a single Excel sheet\n",
-    "updated_records_df.to_excel('Updated_Records.xlsx', index=False)\n"
+    "for month in months:\n",
+    "    # Load the monthly GHA and Open Positions files\n",
+    "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')\n",
+    "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')\n",
+    "\n",
+    "    # Call the function to track changes\n",
+    "    master_df, updated_records = track_changes_with_details(master_df, gha_mom, mom_open_pos, month, columns_to_check_gha, columns_to_check_open_pos)\n",
+    "    all_updated_records.append(updated_records)\n",
+    "\n",
+    "# Combine all updated records\n",
+    "final_updated_records_df = pd.concat(all_updated_records, ignore_index=True)\n",
+    "\n",
+    "# Write the combined DataFrame to an Excel file\n",
+    "final_updated_records_df.to_excel('final_updated_records_with_details.xlsx', sheet_name='All_Updates', index=False)\n",
+    "\n",
+    "print(\"All updated records with details saved to 'final_updated_records_with_details.xlsx'\")\n"
    ]
   },
   {
