--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -7,40 +7,129 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Remove duplicates from 'mapping' and merge for 'MICA'\n",
-    "mapping_unique = mapping[['NOMINAL_VALUE', 'MICA']].drop_duplicates()\n",
-    "hdpi = hdpi.merge(mapping_unique, \n",
-    "                  left_on='Nominal', \n",
-    "                  right_on='NOMINAL_VALUE', \n",
-    "                  how='left').drop(columns=['NOMINAL_VALUE'])\n",
+    "import pandas as pd\n",
     "\n",
-    "# Step 2: Remove duplicates from 'AC_Mapper' and merge for 'Ac Desc Level 1'\n",
-    "AC_Mapper_unique = AC_Mapper[['nominal', 'Ac Desc Level 1']].drop_duplicates()\n",
-    "hdpi = hdpi.merge(AC_Mapper_unique, \n",
-    "                  left_on='Nominal', \n",
-    "                  right_on='nominal', \n",
-    "                  how='left').drop(columns=['nominal'])\n",
+    "def track_changes_with_details(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
+    "    \"\"\"\n",
+    "    Tracks changes with details like source, month of change, and reason.\n",
     "\n",
-    "# Step 3: Remove duplicates from 'DC_Mapper' and merge for 'CATEGORY OF EXP'\n",
-    "DC_Mapper_unique = DC_Mapper[['ccID', 'CATEGORY OF EXP']].drop_duplicates()\n",
-    "hdpi = hdpi.merge(DC_Mapper_unique, \n",
-    "                  left_on='COST_CENTRE', \n",
-    "                  right_on='ccID', \n",
-    "                  how='left').drop(columns=['ccID'])\n",
+    "    Args:\n",
+    "    - master_df (DataFrame): The merged master DataFrame.\n",
+    "    - gha_mom (DataFrame): The month-specific GHA data.\n",
+    "    - mom_open_pos (DataFrame): The month-specific Open Positions data.\n",
+    "    - current_month (str): The current month (e.g., 'Jan-24').\n",
+    "    - gha_columns (list): Columns to check for GHA source.\n",
+    "    - open_pos_columns (list): Columns to check for Open Positions source.\n",
     "\n",
-    "# Step 4: Calculate 'USD' column\n",
-    "exchange_rate = float(input(\"Enter Exchange Rate: \"))\n",
-    "hdpi['USD'] = hdpi['O'] / exchange_rate\n",
+    "    Returns:\n",
+    "    - master_df (DataFrame): The updated master DataFrame.\n",
+    "    - updated_records_df (DataFrame): Consolidated DataFrame of updated records for the month.\n",
+    "    \"\"\"\n",
+    "    # Ensure Position ID and Employee ID are strings for consistency\n",
+    "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
+    "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
+    "    gha_mom['Position ID'] = gha_mom['Position ID'].astype(str)\n",
+    "    mom_open_pos['Position ID'] = mom_open_pos['Position ID'].astype(str)\n",
     "\n",
-    "# Step 5: Remove duplicates from 'ospd' and merge for 'OSPD L2', 'OSPD L3', 'OSPD L4'\n",
-    "ospd_unique = ospd[['CC_ID', 'OSPD L2', 'OSPD L3', 'OSPD L4']].drop_duplicates()\n",
-    "hdpi = hdpi.merge(ospd_unique, \n",
-    "                  left_on='COST_CENTRE', \n",
-    "                  right_on='CC_ID', \n",
-    "                  how='left').drop(columns=['CC_ID'])\n",
+    "    updated_records = []\n",
     "\n",
-    "# Ensure unmatched rows are blank\n",
-    "hdpi.fillna('', inplace=True)\n"
+    "    # Process GHA records\n",
+    "    for _, row in gha_mom.iterrows():\n",
+    "        match_in_master = master_df[(master_df['Position ID'] == row['Position ID']) &\n",
+    "                                    (master_df['Employee ID'] == row['Employee ID'])]\n",
+    "\n",
+    "        if not match_in_master.empty:\n",
+    "            # Check for changes in GHA columns\n",
+    "            changes = []\n",
+    "            for col in gha_columns:\n",
+    "                if row[col] != match_in_master.iloc[0][col]:\n",
+    "                    changes.append(col)\n",
+    "\n",
+    "            if changes:\n",
+    "                reason = \"; \".join([f\"{col} Changed\" for col in changes])\n",
+    "                updated_records.append({\n",
+    "                    **row.to_dict(),\n",
+    "                    'Source': 'GHA',\n",
+    "                    'Month of Change': current_month,\n",
+    "                    'Reason of Change': reason\n",
+    "                })\n",
+    "        elif current_month != 'Jan-24':  # Ignore new records for base month\n",
+    "            updated_records.append({\n",
+    "                **row.to_dict(),\n",
+    "                'Source': 'GHA',\n",
+    "                'Month of Change': current_month,\n",
+    "                'Reason of Change': 'New Record'\n",
+    "            })\n",
+    "\n",
+    "    # Process Open Positions records\n",
+    "    for _, row in mom_open_pos.iterrows():\n",
+    "        match_in_master = master_df[master_df['Position ID'] == row['Position ID']]\n",
+    "\n",
+    "        if not match_in_master.empty:\n",
+    "            # Check for changes in Open Positions columns\n",
+    "            changes = []\n",
+    "            for col in open_pos_columns:\n",
+    "                if row[col] != match_in_master.iloc[0][col]:\n",
+    "                    changes.append(col)\n",
+    "\n",
+    "            if changes:\n",
+    "                reason = \"; \".join([f\"{col} Changed\" for col in changes])\n",
+    "                updated_records.append({\n",
+    "                    **row.to_dict(),\n",
+    "                    'Source': 'Open Positions',\n",
+    "                    'Month of Change': current_month,\n",
+    "                    'Reason of Change': reason\n",
+    "                })\n",
+    "        else:\n",
+    "            # New record for Open Positions\n",
+    "            updated_records.append({\n",
+    "                **row.to_dict(),\n",
+    "                'Source': 'Open Positions',\n",
+    "                'Month of Change': current_month,\n",
+    "                'Reason of Change': 'New Record'\n",
+    "            })\n",
+    "\n",
+    "    # Convert updated records to DataFrame\n",
+    "    updated_records_df = pd.DataFrame(updated_records)\n",
+    "\n",
+    "    # Remove duplicate changes already captured\n",
+    "    if not updated_records_df.empty:\n",
+    "        previous_changes = master_df[['Position ID', 'Reason of Change']].drop_duplicates()\n",
+    "        updated_records_df = updated_records_df.merge(previous_changes, on=['Position ID', 'Reason of Change'], how='left', indicator=True)\n",
+    "        updated_records_df = updated_records_df[updated_records_df['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
+    "\n",
+    "    # Update master_df with new records\n",
+    "    master_df = pd.concat([master_df, updated_records_df], ignore_index=True).drop_duplicates()\n",
+    "\n",
+    "    return master_df, updated_records_df\n",
+    "\n",
+    "\n",
+    "# Define columns to check\n",
+    "columns_to_check_gha = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
+    "columns_to_check_open_pos = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "\n",
+    "# Example processing for multiple months\n",
+    "months = ['Jan-24', 'Feb-24', 'Mar-24']\n",
+    "all_updated_records = []\n",
+    "\n",
+    "for month in months:\n",
+    "    # Load the monthly GHA and Open Positions files\n",
+    "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')  # Replace with actual file paths\n",
+    "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')  # Replace with actual file paths\n",
+    "\n",
+    "    # Track changes for the month\n",
+    "    master_df, updated_records = track_changes_with_details(\n",
+    "        master_df, gha_mom, mom_open_pos, month, columns_to_check_gha, columns_to_check_open_pos\n",
+    "    )\n",
+    "    all_updated_records.append(updated_records)\n",
+    "\n",
+    "# Combine all updated records\n",
+    "final_updated_records_df = pd.concat(all_updated_records, ignore_index=True)\n",
+    "\n",
+    "# Write the consolidated DataFrame to an Excel file\n",
+    "final_updated_records_df.to_excel('final_updated_records_with_details.xlsx', sheet_name='All_Updates', index=False)\n",
+    "\n",
+    "print(\"All updated records with details saved to 'final_updated_records_with_details.xlsx'\")\n"
    ]
   },
   {
